--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
     </footer>
     
     
-    <!-- scroll reveal -->
+    <!-- scroll reveal 
     <script src="https://unpkg.com/scrollreveal"></script>
-
+-->
     <script src="index.js"></script>
 
  </body>
